versions/v2.10/modules/en/pages/installation-and-upgrade/hosted-kubernetes/rancher-on-aks.adoc
= Installing {rancher-product-name} on Azure Kubernetes Service
:page-languages: [en, zh]
:revdate: 2026-07-20
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rancher-on-aks.adoc 
:product-path: installation-and-upgrade/hosted-kubernetes/rancher-on-aks.adoc
ifeval::["{build-type}" != "community"]
:xref-install-rancher: xref:installation-and-upgrade/install-rancher.adoc
:xref-install-reqs: xref:installation-and-upgrade/requirements/requirements.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-install-rancher: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/index.adoc
:xref-install-reqs: xref:getting-started/installation-and-upgrade/installation-requirements/index.adoc 
endif::[]

This page covers how to install Rancher on Microsoft's Azure Kubernetes Service (AKS).

The guide uses command line tools to provision an AKS cluster with an ingress. If you prefer to provision your cluster using the Azure portal, refer to the https://docs.microsoft.com/en-us/azure/aks/kubernetes-walkthrough-portal[official documentation].

If you already have an AKS Kubernetes cluster, skip to the step about <<_5_install_an_ingress,installing an ingress.>> Then install the Rancher Helm chart following the instructions on {xref-install-rancher}#_install_the_rancher_helm_chart[this page.]

== Prerequisites

[CAUTION]
====

Deploying to Microsoft Azure will incur charges.
====


* https://azure.microsoft.com/en-us/free/[Microsoft Azure Account]: A Microsoft Azure Account is required to create resources for deploying Rancher and Kubernetes.
* https://docs.microsoft.com/en-us/azure/cost-management-billing/manage/create-subscription#create-a-subscription-in-the-azure-portal[Microsoft Azure Subscription]: Use this link to follow a tutorial to create a Microsoft Azure subscription if you don't have one yet.
* https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-create-new-tenant[Micsoroft Azure Tenant]: Use this link and follow instructions to create a Microsoft Azure tenant.
* Your subscription has sufficient quota for at least 2 vCPUs. For details on Rancher server resource requirements, refer to {xref-install-reqs}[this section]
* When installing Rancher with Helm in Azure, use the L7 load balancer to avoid networking issues. For more information, refer to the documentation on https://docs.microsoft.com/en-us/azure/load-balancer/components#_limitations[Azure load balancer limitations].

== 1. Prepare your Workstation

Install the following command line tools on your workstation:

* The Azure CLI, *az:* For help, refer to these https://docs.microsoft.com/en-us/cli/azure/[installation steps.]
* *kubectl:* For help, refer to these https://kubernetes.io/docs/tasks/tools/#kubectl[installation steps.]
* *helm:* For help, refer to these https://helm.sh/docs/intro/install/[installation steps.]

== 2. Create a Resource Group

After installing the CLI, you will need to log in with your Azure account.

[,shell]
----
az login
----

Create a https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resource-groups-portal[resource group] to hold all relevant resources for your cluster. Use a location that applies to your use case.

[,shell]
----
az group create --name rancher-rg --location eastus
----

== 3. Create the AKS Cluster

To create an AKS cluster, run the following command. Use a VM size that applies to your use case. Refer to https://docs.microsoft.com/en-us/azure/virtual-machines/sizes[this article] for available sizes and options. When choosing a Kubernetes version, be sure to first consult the https://rancher.com/support-matrix/[support matrix] to find the highest version of Kubernetes that has been validated for your Rancher version.

[,shell]
----
az aks create \
  --resource-group rancher-rg \
  --name rancher-server \
  --kubernetes-version <VERSION> \
  --node-count 3 \
  --node-vm-size Standard_D2_v3
----

The cluster will take some time to be deployed.

== 4. Get Access Credentials

After the cluster is deployed, get the access credentials.

[,shell]
----
az aks get-credentials --resource-group rancher-rg --name rancher-server
----

This command merges your cluster's credentials into the existing kubeconfig and allows `kubectl` to interact with the cluster.

== 5. Install an Ingress

The cluster needs an Ingress so that Rancher can be accessed from outside the cluster. Installing an Ingress requires allocating a public IP address. Ensure you have sufficient quota, otherwise it will fail to assign the IP address. Limits for public IP addresses are applicable at a regional level per subscription. You can use a managed ingress controller provided by Azure or a third-party ingress controller like Traefik.

[WARNING]
====
It is not recommended to install a third-party ingress controller, like Traefik, if a managed ingress controller is already being used.
====

[WARNING]
====
**Ingress-NGINX EOL:** The community `ingress-nginx` controller reaches End-of-Life (EOL) in March 2026. This page uses Traefik, which is the recommended migration path for Rancher environments.
====

Traefik includes a native Ingress NGINX provider. This allows you to migrate from NGINX without rewriting your existing Ingress objects, as Traefik will automatically interpret `nginx.ingress.kubernetes.io` annotations. If you are upgrading a cluster that is already using `ingress-nginx`, follow this https://doc.traefik.io/traefik/migrate/nginx-to-traefik/[guide] for more information.

ifeval::["{build-type}" != "community"]
To install Traefik, we highly recommend using the Traefik application in the https://apps.rancher.io/applications/traefik-proxy[Rancher Prime Application Collection]. Check their https://docs.apps.rancher.io/howto-guides/integrate-with-rancher-manager[documentation to integrate with Rancher Manager].
endif::[]


== 6. Get Load Balancer IP

To get the address of the load balancer, run:

[,shell]
----
kubectl get service traefik --namespace=traefik
----

The result should look similar to the following:

[,shell]
----
NAME                       TYPE           CLUSTER-IP     EXTERNAL-IP    PORT(S)
 AGE
traefik  LoadBalancer   10.0.116.18    40.31.180.83   80:31229/TCP,443:31050/TCP 67s
----

Save the `EXTERNAL-IP`.

== 7. Set up DNS

External traffic to the Rancher server will need to be directed at the load balancer you created.

Set up a DNS to point at the `EXTERNAL-IP` that you saved. This DNS will be used as the Rancher server URL.

There are many valid ways to set up the DNS. For help, refer to the https://docs.microsoft.com/en-us/azure/dns/[Azure DNS documentation]

== 8. Install the Rancher Helm Chart

Next, install the Rancher Helm chart by following the instructions on {xref-install-rancher}#_install_the_rancher_helm_chart[this page.] The Helm instructions are the same for installing Rancher on any Kubernetes distribution.

Use that DNS name from the previous step as the Rancher server URL when you install Rancher. It can be passed in as a Helm option. For example, if the DNS name is `rancher.my.org`, you could run the Helm installation command with the option `--set hostname=rancher.my.org`.

When installing Rancher on top of this setup, you will also need to pass the value below into the Rancher Helm install command in order to set the name of the ingress controller to be used with Rancher's ingress resource:

[,shell]
----
--set ingress.ingressClassName=traefik
----

Refer {xref-install-rancher}#_5_install_rancher_with_helm_and_your_chosen_certificate_option[here for the Helm install command] for your chosen certificate option.
